Fixing squeezed images on firefox

--- a/src/App.css
+++ b/src/App.css
@@ -30,9 +30,10 @@ img{
 
 .main h1{
   position: absolute;
-  top: 5%;
+  top: 4.5%;
   width: 100%;
   text-align: center;
+  font-size: 40px;
   color: #fff;
 }
 
